<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ww_cream_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ww_padding_l">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_login"
            android:textColor="@color/ww_teal_700"
            android:textSize="@dimen/ww_text_header"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ww_padding_l"
            app:cardBackgroundColor="@color/ww_surface"
            app:cardCornerRadius="@dimen/ww_corner_radius"
            app:cardElevation="@dimen/ww_card_elevation"
            app:contentPadding="@dimen/ww_padding_l"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/ww_text_secondary"
                    android:textSize="@dimen/ww_text_body" />

                <EditText
                    android:id="@+id/etAdminEmail"
                    style="@style/WelfareWave.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ww_padding_l"
                    android:text="@string/password"
                    android:textColor="@color/ww_text_secondary"
                    android:textSize="@dimen/ww_text_body" />

                <EditText
                    android:id="@+id/etAdminPassword"
                    style="@style/WelfareWave.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAdminSubmit"
                    style="@style/WelfareWave.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ww_padding_l"
                    android:text="@string/login" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
