<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ww_cream_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ww_padding_l">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_new_user"
            android:textColor="@color/ww_teal_700"
            android:textSize="@dimen/ww_text_header"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ww_padding_l"
            app:cardBackgroundColor="@color/ww_surface"
            app:cardCornerRadius="@dimen/ww_corner_radius"
            app:cardElevation="@dimen/ww_card_elevation"
            app:contentPadding="@dimen/ww_padding_l">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/ww_text_secondary"
                    android:textSize="@dimen/ww_text_body" />

                <EditText
                    android:id="@+id/etName"
                    style="@style/WelfareWave.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ww_padding_l"
                    android:text="@string/email"
                    android:textColor="@color/ww_text_secondary"
                    android:textSize="@dimen/ww_text_body" />

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/WelfareWave.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mobile"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etMobile"
                    style="@style/WelfareWave.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="newPassword"
                    android:hint="Mobile Number"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ww_padding_l"
                    android:text="@string/password"
                    android:textColor="@color/ww_text_secondary"
                    android:textSize="@dimen/ww_text_body" />

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/WelfareWave.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="newPassword"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/TextView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ww_padding_l"
                    android:text="Confirm Password"
                    android:textColor="@color/ww_text_secondary"
                    android:textSize="@dimen/ww_text_body" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    style="@style/WelfareWave.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="newPassword"
                    android:hint="Confirm Password"
                    android:inputType="textPassword" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    style="@style/WelfareWave.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ww_padding_l"
                    android:text="@string/register" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
